--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,9 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 server.port=5454
-spring.datasource.url=jdbc:mysql://localhost:3307/amazondb
+spring.datasource.url=jdbc:mysql://localhost:3306/amazondb
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
