--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.port=5454
 spring.datasource.url=jdbc:mysql://localhost:3306/amazondb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=lighting123@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
