--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,14 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 			<version>3.2.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>2.2.224</version>
+    <scope>test</scope>
+</dependency>
+
 	</dependencies>
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
 	<!--
