--- a/pom.xml
+++ b/pom.xml
@@ -152,12 +152,20 @@
 			<version>3.2.3</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
-<dependency>
-    <groupId>com.h2database</groupId>
-    <artifactId>h2</artifactId>
-    <version>2.2.224</version>
-    <scope>test</scope>
-</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>25.7.0</version>
+		</dependency>
+
 
 	</dependencies>
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
